# investment_analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  System_Analysis_Report.md  main.py  pyproject.toml  requirements.txt  test_fix.py
src/: main.py  run_backend.py  utils.py
src/backend/: analysis_engine.py
src/backend/data/: data_normalizer.py  real_data_fetcher.py  stock_data_fetcher.py  yahoo_finance_fetcher.py
src/backend/recommendation/: recommendation_engine.py
src/backend/valuation/: cca_analyzer.py  dcf_analyzer.py
src/frontend/: next.config.js  start-frontend.sh  tailwind.config.js  tsconfig.tsbuildinfo  web_app.py
src/frontend/.next/: trace
src/frontend/.next/cache/: .tsbuildinfo
src/frontend/.next/server/: next-font-manifest.js  webpack-runtime.js
src/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
src/frontend/.next/server/vendor-chunks/: @heroicons.js  @swc.js  @tanstack.js  asynckit.js  axios.js  clsx.js  ms.js  (+28 more)
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/components/analysis/: analysis-result.tsx  data-verification.tsx  index.ts
src/frontend/components/charts/: valuation-comparison-chart.tsx
src/frontend/components/layout/: header.tsx
src/frontend/components/market/: index.ts  market-overview.tsx
src/frontend/components/providers/: query-provider.tsx
src/frontend/components/stock/: stock-search.tsx
src/frontend/components/ui/: loading-spinner.tsx
src/frontend/types/: index.ts
src/shared/: constants.py  types.py
tests/: test_data_normalization.py  test_main.py  test_utils.py
(+22 files in other folders)
